fix image display on mobile

--- a/Valentines25/src/styles.css
+++ b/Valentines25/src/styles.css
@@ -82,6 +82,12 @@ button:hover {
     width: auto;
     border-radius: 10px;
 }
+@media (max-width: 600px) {
+    .cats-img {
+        width: 50%;
+        height: auto;
+    }
+}
 
 /* states */
 .active {
